# webcam_panasiam_mail

./: .gitignore  README.md  pyproject.toml
.nomad/: template-deploy.nomad
Test/: __main__.py  cli.py
panasiam_webcam_mail/: README.md  __main__.py  cli.py  pyproject.toml
